--- a/assets/stylesheets/style.sass
+++ b/assets/stylesheets/style.sass
@@ -17,3 +17,9 @@ row
 .reset
     display: flex
     flex-direction: column
+    margin-top: 2rem
+    margin-bottom: 2rem
+
+.cards
+    margin-top: 1rem
+    margin-bottom: 1rem
